--- a/client/src/components/Nav/Navbar.module.css
+++ b/client/src/components/Nav/Navbar.module.css
@@ -3,7 +3,9 @@
     --secondaryColor: #26262E;
     --thirdColor: #FB8C07;
   }
+  @import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;500&display=swap');
 
+  
   button:hover {
      cursor: pointer;
   }
@@ -13,7 +15,7 @@
     background-color: var(--primaryColor);
     width: 100%;
     height: 90px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Gemunu Libre', sans-serif;
     display: flex;
 }
 
@@ -69,6 +71,7 @@ padding-right: 25px;
     padding-left: 15px;
     color: white;
     background-color: var(--secondaryColor);
+    font-family: 'Gemunu Libre', sans-serif;
 }
 
 .rightSide button {
