--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -14,16 +14,20 @@
 
 .container {
 background-image: url('../img/backgound-image.jpg');
-background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.192) 10%, rgba(0, 0, 0, 0.438) 84%, rgba(0, 0, 0, 0.199) 100%), url('../img/backgound-image.jpg');
+background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.72) 30%, rgba(0, 0, 0, 0.438) 84%, rgba(0, 0, 0, 0.199) 100%), url('../img/backgound-image.jpg');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
 height: 100vh;
 text-align: center;
 }
+.container2 {
+    padding-top: 300px;
+}
+
 
 h1 {
-    color: var(--primaryColor);
+    color: white;
  font-family: 'Gemunu Libre', sans-serif;
  font-size: 55px;
 }
@@ -35,6 +39,7 @@ h1 span {
 
 p {
     color: white;
+    font-size: 24px;
 }
 
 .btn {
