--- a/client/src/components/Games/Games.module.css
+++ b/client/src/components/Games/Games.module.css
@@ -10,6 +10,12 @@
     justify-content: center;
     grid-template-columns: 30% 30% 30%;
     text-decoration: none;
+    background-image: url('../img/img3.jpg');
+background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.72) 30%, rgba(0, 0, 0, 0.438) 84%, rgba(0, 0, 0, 0.199) 100%), url('../img/img3.jpg');
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+    
 }
 
 .links {
@@ -18,9 +24,9 @@
 
 body{
     font-family: 'Gemunu Libre', sans-serif;
-    overflow-x: hidden;
     background-color: var(--secondaryColor);
-   
+
+
 }
 
 .btnPage {
@@ -30,7 +36,7 @@ body{
     color: var(--thirdColor);
     font-family: 'Staatliches', cursive;
     font-size: 1.2em;
-   margin-top: 5px;
+    margin-top: 5px;
     margin-left: 10px;
     padding: 5px;
     letter-spacing: 2px;
