--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,22 +1,27 @@
 .footer {
-    align-items: center;
-    padding-left: 330px;
     background-color: #151515;
     display: flex;
     height: 100px;
     width: 100%;
-    padding-top: 20px;
+    align-content: center;
+    justify-content: center;
+    padding-top: 30px;
+    text-align: end;
 }
 
 .footer a {
     color: white;
     cursor: pointer;
     font-size: 16px;
-    padding-left: 30px;
     text-decoration: none;
     margin-left: 400px;
-}
+    margin-top: 8px;
+    }
 
 .footer a:hover {
     text-decoration: underline;
+}
+
+.footer h1 {
+    font-size:24px;
 }
