--- a/client/src/components/GameDetails/GameDetails.module.css
+++ b/client/src/components/GameDetails/GameDetails.module.css
@@ -1,23 +1,31 @@
 .containerDetails {
     width: 100%;
-  height: 1000px;
+  height: 700px;
 }
+
 .vgname {
     color: var(--thirdColor);
-    margin-top: 35px;
-    margin-left: 20px;
+   
 }
+
+.vgnameTitle{  
+    margin-top:50px;
+}
+
 .containerDetails2 {
     display: grid;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 50% 50%;
+    margin-left: 30px;
+    margin-top: 50px;
 }
 
 .descriptionDetails {
-    margin-top: 5px;
-    padding-top: 10px;
-    line-height: 35px;
+      line-height: 32px;
     font-weight: 200;
     color: white;
+    font-size: 18px;
+    margin-left: 20px;
+    padding-right: 80px;
 }
 
 .containerh2p p {
@@ -28,8 +36,7 @@
 }
 
 .linkDetails{
-    margin-left: 600px;
-    
+
 }
 .btnBackHome {
     width: 100px;
@@ -40,7 +47,29 @@
     border: none;
     border-radius: 4px;
 }
+
+.button2{   
+    margin-top: 20px;
+    text-align: center;
+}
+
 .btnBackHome:hover {
     background-color: var(--primaryColor);
     transition: all ease .2s;
+}
+
+.containerDetails3 {
+margin-left: 20px;   
+margin-top: 30px; 
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    font-size: 14px;
+    max-width: 50%;
+  gap: 70px;
+
+}
+
+
+.containerDetails3 p{
+    font-size: 16px;
 }
